--- a/TournamentManagement/Views/EditWindows/EditTeamRosterWindow.xaml
+++ b/TournamentManagement/Views/EditWindows/EditTeamRosterWindow.xaml
@@ -24,7 +24,7 @@
                     HorizontalAlignment="Right" Margin="5" Content="Select Player"
                     Command="{Binding SelectPlayerCommand}" />
         </StackPanel>
-        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
+        <StackPanel Name="TeamSelector" Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
             <TextBox materialDesign:HintAssist.Hint="Team" Width="227"
                      Style="{DynamicResource MaterialDesignOutlinedTextBox}" HorizontalAlignment="Stretch" Margin="5"
                      Text="{Binding TeamName, Mode=OneWay}" IsReadOnly="True" />
@@ -36,6 +36,6 @@
                  Style="{DynamicResource MaterialDesignOutlinedTextBox}" Margin="5" Grid.Row="2"
                  Text="{Binding PlayerPosition}" />
         <Button Height="48" Style="{DynamicResource MaterialDesignOutlinedLightButton}" Grid.Row="4" Content="Save"
-                Command="{Binding EditCommand}" />
+                Command="{Binding EditCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}" />
     </Grid>
 </Window>
