--- a/TournamentManagement/Views/TableWindows/MatchWindow.xaml
+++ b/TournamentManagement/Views/TableWindows/MatchWindow.xaml
@@ -23,10 +23,17 @@
                   materialDesign:DataGridAssist.CellPadding="16 8 8 8"
                   materialDesign:DataGridAssist.ColumnHeaderPadding="16 8 8 8"
                   CanUserAddRows="False" IsReadOnly="True">
+            <DataGrid.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Header="Edit Match" Command="{Binding EditCommand}" />
+                    <MenuItem Header="Remove Match" Command="{Binding DeleteCommand}" />
+                </ContextMenu>
+            </DataGrid.ContextMenu>
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Tournament" Binding="{Binding Tournament.Name}" />
                 <DataGridTextColumn Header="Team 1" Binding="{Binding Team1.Name}" />
                 <DataGridTextColumn Header="Team 2" Binding="{Binding Team2.Name}" />
+                <DataGridTextColumn Header="Map" Binding="{Binding Map}" />
                 <DataGridTextColumn Header="Date" Binding="{Binding Date, StringFormat={}{0:MM/dd/yyyy}}" />
                 <DataGridTextColumn Header="Result" Binding="{Binding Result}" />
             </DataGrid.Columns>
@@ -34,10 +41,10 @@
         <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Content="Add Match" Command="{Binding AddCommand}" HorizontalAlignment="Right"
                     Margin="0,10,10,10" />
-            <Button Content="Remove Match" Command="{Binding DeleteCommand}" HorizontalAlignment="Right"
-                    Margin="0,10,10,10" />
-            <Button Content="Edit Match" Command="{Binding EditCommand}" HorizontalAlignment="Right"
-                    Margin="0,10,10,10" />
+            <!-- <Button Content="Remove Match" Command="{Binding DeleteCommand}" HorizontalAlignment="Right" -->
+            <!--         Margin="0,10,10,10" /> -->
+            <!-- <Button Content="Edit Match" Command="{Binding EditCommand}" HorizontalAlignment="Right" -->
+            <!--         Margin="0,10,10,10" /> -->
         </StackPanel>
     </Grid>
 </Window>
