--- a/TournamentManagement/Views/TableWindows/PlayerWindow.xaml
+++ b/TournamentManagement/Views/TableWindows/PlayerWindow.xaml
@@ -28,13 +28,19 @@
                 <DataGridTextColumn Header="Date of Birth"
                                     Binding="{Binding DateOfBirth, StringFormat={}{0:MM/dd/yyyy}}" />
             </DataGrid.Columns>
+            <DataGrid.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Header="Delete Player" Command="{Binding DeleteCommand}" />
+                    <MenuItem Header="Edit Player" Command="{Binding EditCommand}" />
+                </ContextMenu>
+            </DataGrid.ContextMenu>
         </DataGrid>
         <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Content="Add Player" Command="{Binding AddCommand}" HorizontalAlignment="Right" Margin="0,10,10,10" />
-            <Button Content="Delete Player" Command="{Binding DeleteCommand}" HorizontalAlignment="Right"
-                    Margin="0,10,10,10" />
-            <Button Content="Edit Player" Command="{Binding EditCommand}" HorizontalAlignment="Right"
-                    Margin="0,10,10,10" />
+            <!-- <Button Content="Delete Player" Command="{Binding DeleteCommand}" HorizontalAlignment="Right" -->
+            <!--         Margin="0,10,10,10" /> -->
+            <!-- <Button Content="Edit Player" Command="{Binding EditCommand}" HorizontalAlignment="Right" -->
+            <!--         Margin="0,10,10,10" /> -->
         </StackPanel>
     </Grid>
 </Window>
