--- a/TournamentManagement/Views/TableWindows/TeamRosterWindow.xaml
+++ b/TournamentManagement/Views/TableWindows/TeamRosterWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:tableViewModels="clr-namespace:TournamentManagement.ViewModels.TableViewModels"
-        Title="Team Rosters" Height="550" Width="600" MaxWidth="600"
+        Title="Team Roster" Height="550" Width="600" MaxWidth="600"
         WindowStartupLocation="CenterScreen">
     <Window.DataContext>
         <tableViewModels:TeamRosterViewModel />
@@ -28,14 +28,20 @@
                 <DataGridTextColumn Header="Player Name" Binding="{Binding Player.Name}" />
                 <DataGridTextColumn Header="Player Position" Binding="{Binding PlayerPosition}" />
             </DataGrid.Columns>
+            <DataGrid.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Header="Remove Player from Team" Command="{Binding DeleteCommand}" />
+                    <MenuItem Header="Edit Player Position" Command="{Binding EditCommand}" />
+                </ContextMenu>
+            </DataGrid.ContextMenu>
         </DataGrid>
         <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Content="Add Player to Team" Command="{Binding AddCommand}" HorizontalAlignment="Right"
                     Margin="0,10,10,10" />
-            <Button Content="Remove Player from Team" Command="{Binding DeleteCommand}" HorizontalAlignment="Right"
-                    Margin="0,10,10,10" />
-            <Button Content="Edit Player Position" Command="{Binding EditCommand}" HorizontalAlignment="Right"
-                    Margin="0,10,10,10" />
+            <!-- <Button Content="Remove Player from Team" Command="{Binding DeleteCommand}" HorizontalAlignment="Right" -->
+            <!--         Margin="0,10,10,10" /> -->
+            <!-- <Button Content="Edit Player Position" Command="{Binding EditCommand}" HorizontalAlignment="Right" -->
+            <!--         Margin="0,10,10,10" /> -->
         </StackPanel>
     </Grid>
 </Window>
