--- a/TournamentManagement/Views/TableWindows/TournamentWindow.xaml
+++ b/TournamentManagement/Views/TableWindows/TournamentWindow.xaml
@@ -26,16 +26,23 @@
                 <DataGridTextColumn Header="End Date" Binding="{Binding EndDate, StringFormat={}{0:MM/dd/yyyy}}" />
                 <DataGridTextColumn Header="Location" Binding="{Binding Location}" />
             </DataGrid.Columns>
+            <DataGrid.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Header="Delete Tournament" Command="{Binding DeleteCommand}" />
+                    <MenuItem Header="Edit Tournament" Command="{Binding EditCommand}" />
+                    <MenuItem Header="View Tournament Matches" Command="{Binding ViewMatchCommand}" />
+                </ContextMenu>
+            </DataGrid.ContextMenu>
         </DataGrid>
         <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Content="Add Tournament" Command="{Binding AddCommand}"
                     Margin="0,10,10,10" />
-            <Button Content="Delete Tournament" Command="{Binding DeleteCommand}"
-                    Margin="0,10,10,10" />
-            <Button Content="Edit Tournament" Command="{Binding EditCommand}"
-                    Margin="0,10,10,10" />
-            <Button Content="View Tournament Matches" Command="{Binding ViewMatchCommand}"
-                    Margin="0,10,10,10" />
+            <!-- <Button Content="Delete Tournament" Command="{Binding DeleteCommand}" -->
+            <!--         Margin="0,10,10,10" /> -->
+            <!-- <Button Content="Edit Tournament" Command="{Binding EditCommand}" -->
+            <!--         Margin="0,10,10,10" /> -->
+            <!-- <Button Content="View Tournament Matches" Command="{Binding ViewMatchCommand}" -->
+            <!--         Margin="0,10,10,10" /> -->
         </StackPanel>
     </Grid>
 </Window>
