--- a/TournamentManagement/Views/TableWindows/PlayerWindow.xaml
+++ b/TournamentManagement/Views/TableWindows/PlayerWindow.xaml
@@ -3,16 +3,15 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:tableViewModels="clr-namespace:TournamentManagement.ViewModels.TableViewModels"
-        Title="Players" Height="550" Width="500"
+        Title="Players" Height="550" Width="550"
         WindowStartupLocation="CenterScreen">
     <Window.DataContext>
         <tableViewModels:PlayerViewModel />
     </Window.DataContext>
-    <Grid ScrollViewer.VerticalScrollBarVisibility="Visible">
+    <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="64" />
         </Grid.RowDefinitions>
         <DataGrid ItemsSource="{Binding Items}"
                   SelectedItem="{Binding SelectedItem}"
@@ -35,8 +34,8 @@
                 </ContextMenu>
             </DataGrid.ContextMenu>
         </DataGrid>
-        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Content="Add Player" Command="{Binding AddCommand}" HorizontalAlignment="Right" Margin="0,10,10,10" />
+        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
+            <Button Content="Add Player" Command="{Binding AddCommand}" HorizontalAlignment="Right" Margin="10" />
             <!-- <Button Content="Delete Player" Command="{Binding DeleteCommand}" HorizontalAlignment="Right" -->
             <!--         Margin="0,10,10,10" /> -->
             <!-- <Button Content="Edit Player" Command="{Binding EditCommand}" HorizontalAlignment="Right" -->
