--- a/TournamentManagement/Views/EditWindows/EditMatchWindow.xaml
+++ b/TournamentManagement/Views/EditWindows/EditMatchWindow.xaml
@@ -3,8 +3,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:editViewModels="clr-namespace:TournamentManagement.ViewModels.EditViewModels"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        Title="Edit Match" Height="450" Width="400" ResizeMode="NoResize"
-        WindowStartupLocation="CenterScreen">
+        Title="Edit Match" Height="550" Width="400" ResizeMode="NoResize"
+        WindowStartupLocation="CenterScreen"
+        >
     <Window.DataContext>
         <editViewModels:EditMatchViewModel />
     </Window.DataContext>
@@ -26,7 +27,8 @@
                      Text="{Binding Team1Name, Mode=OneWay}" IsReadOnly="True" />
             <Button Height="48" Style="{DynamicResource MaterialDesignOutlinedLightButton }"
                     HorizontalAlignment="Right" Margin="5" Content="Select Team 1"
-                    Command="{Binding SelectTeam1Command}" />
+                    Command="{Binding SelectTeam1Command}" 
+                    CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}"/>
         </StackPanel>
         <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
             <TextBox materialDesign:HintAssist.Hint="Team 2" Width="215"
@@ -34,7 +36,8 @@
                      Text="{Binding Team2Name, Mode=OneWay}" IsReadOnly="True" />
             <Button Height="48" Style="{DynamicResource MaterialDesignOutlinedLightButton }"
                     HorizontalAlignment="Right" Margin="5" Content="Select Team 2"
-                    Command="{Binding SelectTeam2Command}" />
+                    Command="{Binding SelectTeam2Command}" 
+                    CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}"/>
         </StackPanel>
         <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
             <TextBox materialDesign:HintAssist.Hint="Tournament" Width="185"
@@ -42,12 +45,13 @@
                      Text="{Binding TournamentName, Mode=OneWay}" IsReadOnly="True" />
             <Button Height="48" Style="{DynamicResource MaterialDesignOutlinedLightButton }"
                     HorizontalAlignment="Right" Margin="5" Content="Select Tournament"
-                    Command="{Binding SelectTournamentCommand}" />
+                    Command="{Binding SelectTournamentCommand}" 
+                    CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}"/>
         </StackPanel>
         <!-- <TextBox materialDesign:HintAssist.Hint="Result" Grid.Row="3" Style="{DynamicResource MaterialDesignOutlinedTextBox}" Margin="5" Text="{Binding Result}" /> -->
         <ComboBox Grid.Row="3" Style="{DynamicResource MaterialDesignOutlinedComboBox}" Margin="5"
                   ItemsSource="{Binding ResultOptions}" SelectedItem="{Binding Result}" />
-        <ComboBox Grid.Row="3" Style="{DynamicResource MaterialDesignOutlinedComboBox}" Margin="5"
+        <ComboBox Grid.Row="4" Style="{DynamicResource MaterialDesignOutlinedComboBox}" Margin="5"
                   ItemsSource="{Binding MapOptions}" SelectedItem="{Binding Map}" />
         <DatePicker Grid.Row="5" Style="{DynamicResource MaterialDesignDatePicker}" Margin="5"
                     SelectedDate="{Binding Date}" />
