--- a/TournamentManagement/Views/EditWindows/EditTournamentWindow.xaml
+++ b/TournamentManagement/Views/EditWindows/EditTournamentWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:editViewModels="clr-namespace:TournamentManagement.ViewModels.EditViewModels"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        Title="Edit Tournament" Height="400" Width="350"
+        Title="Edit Tournament" Height="400" Width="350" ResizeMode="NoResize"
         WindowStartupLocation="CenterScreen">
     <Window.DataContext>
         <editViewModels:EditTournamentViewModel />
