--- a/TournamentManagement/Views/TableWindows/TeamWindow.xaml
+++ b/TournamentManagement/Views/TableWindows/TeamWindow.xaml
@@ -34,6 +34,12 @@
                     <MenuItem Header="View Team Roster" Command="{Binding ViewTeamRosterCommand}" />
                 </ContextMenu>
             </DataGrid.ContextMenu>
+
+            <DataGrid.InputBindings>
+                <MouseBinding
+                    MouseAction="LeftDoubleClick"
+                    Command="{Binding ViewTeamRosterCommand}"/>
+            </DataGrid.InputBindings>
         </DataGrid>
         <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Content="Add Team" Command="{Binding AddCommand}" Margin="0,10,10,10" />
