--- a/TournamentManagement/Views/EditWindows/EditTeamRosterWindow.xaml
+++ b/TournamentManagement/Views/EditWindows/EditTeamRosterWindow.xaml
@@ -23,7 +23,7 @@
             <Button Height="48" Style="{DynamicResource MaterialDesignOutlinedLightButton }"
                     HorizontalAlignment="Right" Margin="5" Content="Select Player"
                     Command="{Binding SelectPlayerCommand}"
-                    CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}"/>
+                    CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}" />
         </StackPanel>
         <StackPanel Name="TeamSelector" Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
             <TextBox materialDesign:HintAssist.Hint="Team" Width="227"
@@ -31,13 +31,14 @@
                      Text="{Binding TeamName, Mode=OneWay}" IsReadOnly="True" />
             <Button Height="48" Style="{DynamicResource MaterialDesignOutlinedLightButton }"
                     HorizontalAlignment="Right" Margin="5" Content="Select Team"
-                    Command="{Binding SelectTeamCommand}" 
-                    CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}"/>
+                    Command="{Binding SelectTeamCommand}"
+                    CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}" />
         </StackPanel>
         <TextBox materialDesign:HintAssist.Hint="Player Position"
                  Style="{DynamicResource MaterialDesignOutlinedTextBox}" Margin="5" Grid.Row="2"
                  Text="{Binding PlayerPosition}" />
         <Button Height="48" Style="{DynamicResource MaterialDesignOutlinedLightButton}" Grid.Row="4" Content="Save"
-                Command="{Binding EditCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}" />
+                Command="{Binding EditCommand}"
+                CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}" />
     </Grid>
 </Window>
