--- a/TournamentManagement/Views/EditWindows/EditPlayerWindow.xaml
+++ b/TournamentManagement/Views/EditWindows/EditPlayerWindow.xaml
@@ -33,7 +33,7 @@
         <DatePicker SelectedDate="{Binding DateOfBirth}" Grid.Row="4" Margin="0,0,0,10" />
         <Button VerticalAlignment="Bottom" Command="{Binding EditCommand}"
                 CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}"
-                Content="Edit Player" Grid.Row="7"
+                Content="Save" Grid.Row="7"
                 Style="{StaticResource MaterialDesignRaisedButton}" />
     </Grid>
 </Window>
