--- a/TournamentManagement/Views/EditWindows/EditTeamWindow.xaml
+++ b/TournamentManagement/Views/EditWindows/EditTeamWindow.xaml
@@ -33,7 +33,7 @@
         <DatePicker SelectedDate="{Binding DateCreated}" Grid.Row="5" Margin="0,0,0,10" />
         <Button VerticalAlignment="Bottom" Command="{Binding EditCommand}"
                 CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}"
-                Content="Edit Team" Grid.Row="6"
+                Content="Save" Grid.Row="6"
                 Style="{StaticResource MaterialDesignRaisedButton}" />
     </Grid>
 </Window>
