--- a/TournamentManagement/Views/MainWindow.xaml
+++ b/TournamentManagement/Views/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:viewModels="clr-namespace:TournamentManagement.ViewModels"
-        Title="Admin Panel" Height="380" Width="320"
+        Title="Tournament Management" Height="380" Width="350"
         WindowStartupLocation="CenterScreen"
         Background="{DynamicResource MaterialDesignPaper}">
     <Window.DataContext>
@@ -15,15 +15,14 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <StackPanel Margin="10" Grid.Row="0">
-            <Button Margin="10" Content="Teams" Command="{Binding OpenTeamViewCommand}" />
-            <Button Margin="10" Content="Tournaments" Command="{Binding OpenTournamentViewCommand}" />
-
-            <Button Visibility="{Binding IsShowAllTables, Converter={StaticResource BooleanToVisibilityConverter}}"
-                    Margin="10" Content="Players" Command="{Binding OpenPlayerViewCommand}" />
-            <Button Visibility="{Binding IsShowAllTables, Converter={StaticResource BooleanToVisibilityConverter}}"
-                    Margin="10" Content="Matches" Command="{Binding OpenMatchViewCommand}" />
-            <Button Visibility="{Binding IsShowAllTables, Converter={StaticResource BooleanToVisibilityConverter}}"
-                    Margin="10" Content="Team Rosters" Command="{Binding OpenTeamRosterViewCommand}" />
+            <Button Height="40" Margin="5" Content="Teams" Command="{Binding OpenTeamViewCommand}" />
+            <Button Height="40" Margin="5" Content="Tournaments" Command="{Binding OpenTournamentViewCommand}" />
+            <Button Height="40" Visibility="{Binding IsShowAllTables, Converter={StaticResource BooleanToVisibilityConverter}}"
+                     Margin="5" Content="Players" Command="{Binding OpenPlayerViewCommand}" />
+            <Button Height="40" Visibility="{Binding IsShowAllTables, Converter={StaticResource BooleanToVisibilityConverter}}"
+                     Margin="5" Content="Matches" Command="{Binding OpenMatchViewCommand}" />
+            <Button Height="40" Visibility="{Binding IsShowAllTables, Converter={StaticResource BooleanToVisibilityConverter}}"
+                    Margin="5" Content="Team Rosters" Command="{Binding OpenTeamRosterViewCommand}" />
 
         </StackPanel>
         <StatusBar Grid.Row="2" HorizontalAlignment="Stretch" Style="{DynamicResource MaterialDesignStatusBar}">
